log
Wed 27 Mar 2024 04:43:05 PM UTC: 
 tests:  0|6
total_score: 0/70
faa7d30
Wed 27 Mar 2024 08:01:05 PM UTC: 
 list.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
af83e11
Wed 27 Mar 2024 08:04:26 PM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
4f1f0a4
Wed 27 Mar 2024 08:16:03 PM UTC: 
 list.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  2|5
total_score: 15/70
6a20831
Wed 27 Mar 2024 08:19:42 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
9954d91
Wed 27 Mar 2024 08:29:10 PM UTC: 
 list.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  2|5
total_score: 15/70
eb844bc
Wed 27 Mar 2024 08:32:13 PM UTC: 
 list.c | 11 ++++++++---
 1 file changed, 8 insertions(+), 3 deletions(-)
 tests:  2|5
total_score: 15/70
5b22d65
Wed 27 Mar 2024 08:33:00 PM UTC: 
 list.c | 13 +++++--------
 1 file changed, 5 insertions(+), 8 deletions(-)
 tests:  5|4
total_score: 25/70
f133ded
Wed 27 Mar 2024 08:37:57 PM UTC: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
ece33af
Wed 27 Mar 2024 08:38:35 PM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
ba0f391
Wed 27 Mar 2024 08:41:40 PM UTC: 
 list.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  5|4
total_score: 25/70
b42fcea
Wed 27 Mar 2024 08:42:56 PM UTC: 
 list.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
 tests:  5|4
total_score: 25/70
64fe3f4
Wed 27 Mar 2024 08:43:42 PM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  9|3
total_score: 35/70
aefee72
Wed 27 Mar 2024 08:47:21 PM UTC: 
 list.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  0|0
9adf358
Wed 27 Mar 2024 08:48:17 PM UTC: 
 list.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
In file included from test.c:5:
list.c: In function ‘pushFront’:
list.c:74:11: error: ‘Node’ has no member named ‘key’
   74 |    newNode->key = key;
      |           ^~
list.c:74:19: error: ‘key’ undeclared (first use in this function); did you mean ‘key_t’?
   74 |    newNode->key = key;
      |                   ^~~
      |                   key_t
list.c:74:19: note: each undeclared identifier is reported only once for each function it appears in
list.c:79:8: error: ‘List’ {aka ‘struct List’} has no member named ‘size’
   79 |    list->size ++;
      |        ^~
Compilation failed
42cafd0
Wed 27 Mar 2024 08:48:34 PM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  9|3
total_score: 35/70
021dded
